--- a/app/views/railway_stations/index.html.haml
+++ b/app/views/railway_stations/index.html.haml
@@ -1,16 +1,11 @@
 %p#notice= notice
-%h1 Railway Stations
+%h1 Железнодорожные станции:
 %table
   %thead
     %tr
-      %th Title
+      %th Название
       %th{:colspan => "3"}
   %tbody
-    - @railway_stations.each do |railway_station|
-      %tr
-        %td= railway_station.title
-        %td= link_to 'Show', railway_station
-        %td= link_to 'Edit', edit_railway_station_path(railway_station)
-        %td= link_to 'Destroy', railway_station, method: :delete, data: { confirm: 'Are you sure?' }
+    = render @railway_stations
 %br/
-= link_to 'New Railway Station', new_railway_station_path
+= link_to 'Создать новую ж/д станцию', new_railway_station_path
