Localization views for RailwayStation.

--- a/app/views/railway_stations/show.html.haml
+++ b/app/views/railway_stations/show.html.haml
@@ -1,7 +1,7 @@
 %p#notice= notice
 %p
-  %strong Title:
+  %strong Название:
   = @railway_station.title
-= link_to 'Edit', edit_railway_station_path(@railway_station)
+= link_to 'Редактировать', edit_railway_station_path(@railway_station)
 |
-= link_to 'Back', railway_stations_path
+= link_to 'Список станций', railway_stations_path
