--- a/app/views/railway_stations/_form.html.haml
+++ b/app/views/railway_stations/_form.html.haml
@@ -4,4 +4,4 @@
     = form.label :title
     = form.text_field :title, id: :railway_station_title
   .actions
-    = form.submit
+    = form.submit "#{railway_station.new_record? ? 'Создать' : 'Изменить'}"
