--- a/app/views/railway_stations/edit.html.haml
+++ b/app/views/railway_stations/edit.html.haml
@@ -1,5 +1,5 @@
-%h1 Editing Railway Station
+%h1 Редактировать станцию
 = render 'form', railway_station: @railway_station
-= link_to 'Show', @railway_station
+= link_to 'Показать', @railway_station
 |
-= link_to 'Back', railway_stations_path
+= link_to 'Список станций', railway_stations_path
