--- a/app/views/railway_stations/index.html.haml
+++ b/app/views/railway_stations/index.html.haml
@@ -3,7 +3,7 @@
 %table
   %thead
     %tr
-      %th Название
+      %th Название:
       %th{:colspan => "3"}
   %tbody
     = render @railway_stations
