--- a/app/views/railway_stations/new.html.haml
+++ b/app/views/railway_stations/new.html.haml
@@ -1,3 +1,3 @@
-%h1 New Railway Station
+%h1 Новая станция
 = render 'form', railway_station: @railway_station
-= link_to 'Back', railway_stations_path
+= link_to 'Список станций', railway_stations_path
