--- a/app/views/trains/index.html.haml
+++ b/app/views/trains/index.html.haml
@@ -1,16 +1,11 @@
 %p#notice= notice
-%h1 Trains
+%h1 Список поездов
 %table
   %thead
     %tr
-      %th Number
+      %th Номер:
       %th{:colspan => "3"}
   %tbody
-    - @trains.each do |train|
-      %tr
-        %td= train.number
-        %td= link_to 'Show', train
-        %td= link_to 'Edit', edit_train_path(train)
-        %td= link_to 'Destroy', train, method: :delete, data: { confirm: 'Are you sure?' }
+    = render @trains
 %br/
-= link_to 'New Train', new_train_path
+= link_to 'Создать новый поезд', new_train_path
