--- a/app/views/trains/show.html.haml
+++ b/app/views/trains/show.html.haml
@@ -1,7 +1,7 @@
 %p#notice= notice
 %p
-  %strong Number:
+  %strong Номер:
   = @train.number
-= link_to 'Edit', edit_train_path(@train)
+= link_to 'Редактировать', edit_train_path(@train)
 |
-= link_to 'Back', trains_path
+= link_to 'Список поездов', trains_path
