--- a/app/views/trains/edit.html.haml
+++ b/app/views/trains/edit.html.haml
@@ -1,5 +1,5 @@
-%h1 Editing Train
+%h1 Редактировать поезд
 = render 'form', train: @train
-= link_to 'Show', @train
+= link_to 'Показать', @train
 |
-= link_to 'Back', trains_path
+= link_to 'Список поездов', trains_path
