--- a/app/views/trains/new.html.haml
+++ b/app/views/trains/new.html.haml
@@ -1,3 +1,3 @@
-%h1 New Train
+%h1 Новый поезд
 = render 'form', train: @train
-= link_to 'Back', trains_path
+= link_to 'Список поездов', trains_path
