--- a/app/views/routes/index.html.haml
+++ b/app/views/routes/index.html.haml
@@ -6,11 +6,6 @@
       %th Название маршрута
       %th{:colspan => "3"}
   %tbody
-    - @routes.each do |route|
-      %tr
-        %td= route.name
-        %td= link_to 'Показать', route
-        %td= link_to 'Редактировать', edit_route_path(route)
-        %td= link_to 'Удалить', route, method: :delete, data: { confirm: 'Вы уверены?' }
+    = render @routes
 %br/
 = link_to 'Создать новый маршрут', new_route_path
