--- a/app/views/trains/_form.html.haml
+++ b/app/views/trains/_form.html.haml
@@ -3,5 +3,8 @@
   .field
     = form.label :number
     = form.text_field :number, id: :train_number
+  .field
+    = form.label :route
+    = form.collection_select :route_id, Route.all, :id, :name
   .actions
     = form.submit "#{train.new_record? ? 'Создать' : 'Изменить'}"
