--- a/app/views/routes/_form.html.haml
+++ b/app/views/routes/_form.html.haml
@@ -4,4 +4,4 @@
     = form.label :name
     = form.text_field :name, id: :route_name
   .actions
-    = form.submit "#{train.new_record? ? 'Создать' : 'Изменить'}"
+    = form.submit "#{route.new_record? ? 'Создать' : 'Изменить'}"
