When viewing a route, a list of stations on this route is displayed. Refactoring list of trains on route.

--- a/app/views/routes/show.html.haml
+++ b/app/views/routes/show.html.haml
@@ -5,9 +5,21 @@
 %p
   %strong Поезда на маршруте:
   - if @route.trains.empty?
-    На маршруте поездов нет.
+    Поездов на маршруте нет.
   - else
-    = render 'trains/trains', trains: @route.trains
+    - @route.trains.each do |train|
+      %ul
+        %li
+          = train.number
+%p
+  %strong Станции маршрута:
+  - if @route.railway_stations.empty?
+    Станций в маршруте нет.
+  - else
+    - @route.railway_stations.each do |station|
+      %ul
+        %li
+          = station.title
 = link_to 'Редактировать', edit_route_path(@route)
 |
 = link_to 'Список маршрутов', routes_path
