Fix current year in footer

--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -1,6 +1,6 @@
 %p
   %small
-    (с) 2017 Сизов Алексей. Учебный проект в
+    (с) #{Time.now.year} Сизов Алексей. Учебный проект в
     %a
       - href="http://www.thinknetica.com"
       онлайн-школе Thinknetica
