User can create, edit carriage and add carriage to train

--- a/app/views/trains/show.html.haml
+++ b/app/views/trains/show.html.haml
@@ -12,3 +12,5 @@
 = link_to 'Редактировать', edit_train_path(@train)
 |
 = link_to 'Список поездов', trains_path
+|
+= link_to 'Добавить вагон', new_carriage_path
