--- a/app/views/carriages/show.html.haml
+++ b/app/views/carriages/show.html.haml
@@ -1,19 +1,2 @@
 %p#notice= notice
-%p
-  %strong Train:
-  - if @carriage.train
-    = @carriage.train.number
-  - else
-    The train is not assigned.
-  %br
-  %strong Type: 
-  = @carriage.type_class
-  %br
-  %strong Bottom seats: 
-  = @carriage.bottom_seats
-  %br
-  %strong Top seats: 
-  = @carriage.top_seats
-= link_to 'Edit', edit_carriage_path(@carriage)
-= link_to 'Delete', @carriage, method: :delete, data: { confirm: 'Are you sure?' }
-= link_to 'Train', @carriage.train
+= render @carriage
