--- a/app/views/trains/show.html.haml
+++ b/app/views/trains/show.html.haml
@@ -8,6 +8,14 @@
     = @train.route.name
   - else
     Маршрут не назначен.
+%p
+  %strong Количество вагонов:
+  %br
+  Купейных:
+  = @train.carriages.where(type_class: 'coupe').count
+  %br
+  Плацкартных:
+  = @train.carriages.where(type_class: 'platscart').count
 
 = link_to 'Редактировать', edit_train_path(@train)
 |
