--- a/app/views/trains/show.html.haml
+++ b/app/views/trains/show.html.haml
@@ -8,14 +8,29 @@
     = @train.route.name
   - else
     Маршрут не назначен.
-%p
-  %strong Количество вагонов:
-  %br
-  Купейных:
-  = @train.carriages.coupe.count
-  %br
-  Плацкартных:
-  = @train.carriages.platscart.count
+- if @train.carriages
+  %p
+    %strong Количество вагонов:
+    %br
+    Купейных:
+    = @train.carriages.coupe.count
+    %br
+    Верхних мест всего:
+    = @train.carriages.total_seats(:coupe, :top_seats)
+    %br
+    Нижних мест всего:
+    = @train.carriages.total_seats(:coupe, :bottom_seats)
+    %br
+    Плацкартных:
+    = @train.carriages.platscart.count
+    %br
+    Верхних мест всего:
+    = @train.carriages.total_seats(:platscart, :top_seats)
+    %br
+    Нижних мест всего:
+    = @train.carriages.total_seats(:platscart, :bottom_seats)
+- else
+  %strong К поезду не прицеплен ни один вагон
 
 = link_to 'Редактировать', edit_train_path(@train)
 |
