Refactoring.Fix mentor remarks.

--- a/app/views/trains/show.html.haml
+++ b/app/views/trains/show.html.haml
@@ -8,7 +8,7 @@
     = @train.route.name
   - else
     Маршрут не назначен.
-- if @train.carriages
+- if @train.carriages.any?
   %p
     %strong Количество вагонов:
     %br
