Sorting of carriages in a train

--- a/app/views/trains/show.html.haml
+++ b/app/views/trains/show.html.haml
@@ -8,14 +8,17 @@
     = @train.route.name
   - else
     Маршрут не назначен.
+%h4 Вагоны
+%p
 - if @train.carriages.any?
+  Coртировка:
+  = @train.car_sort ? "С головы поезда" : "С хвоста поезда"
   %ul
-    - @train.carriages.each do |carriage|
+    - @train.carriages.car_sort(@train).each do |carriage|
       %li
         = link_to carriage.number, carriage
-
   %p
-    %strong Количество вагонов:
+    Количество вагонов:
     %br
     Купейных:
     = @train.carriages.coupe.count
