--- a/app/views/trains/_form.html.haml
+++ b/app/views/trains/_form.html.haml
@@ -6,5 +6,10 @@
   .field
     = form.label :route
     = form.collection_select :route_id, Route.all, :id, :name
+  .field
+    = form.radio_button :car_sort, true
+    = form.label :car_sort, 'С головы поезда'
+    = form.radio_button :car_sort, false
+    = form.label :car_sort, 'С хвоста поезда'
   .actions
     = form.submit "#{train.new_record? ? 'Создать' : 'Изменить'}"
