--- a/app/views/carriages/_form.html.haml
+++ b/app/views/carriages/_form.html.haml
@@ -1,9 +1,5 @@
-= form_with(model: carriage.becomes(Carriage), local: true) do |form|
+= form_with(model: [@train, carriage.becomes(Carriage)], local: true) do |form|
   = render 'common/errors', resource: carriage
-  .field
-    %strong
-      = form.label :train
-    = form.collection_select :train_id, Train.all, :id, :number
   .field 
     %strong Type
     - Carriage::TYPE_CLASS.each do |type|
