--- a/app/views/trains/show.html.haml
+++ b/app/views/trains/show.html.haml
@@ -1,6 +1,6 @@
 %p#notice= notice
 %p
-  %strong Номер:
+  %strong Поезд номер:
   = @train.number
 %p
   %strong Маршрут:
@@ -16,7 +16,7 @@
   %ul
     - @train.carriages.car_sort(@train).each do |carriage|
       %li
-        = link_to carriage.number, carriage
+        = link_to "Вагон № #{carriage.number}", carriage
   %p
     Количество вагонов:
     %br
@@ -44,4 +44,4 @@
 |
 = link_to 'Список поездов', trains_path
 |
-= link_to 'Добавить вагон', new_carriage_path
+= link_to 'Добавить вагон', new_train_carriage_path(@train)
