--- a/app/views/routes/show.html.haml
+++ b/app/views/routes/show.html.haml
@@ -33,16 +33,13 @@
                 = number_field_tag :position, station.position_in(@route), min: 0
                 = hidden_field_tag :route_id, @route.id
                 = submit_tag 'Изменить'
-            %td
-              = form_tag update_arrival_railway_station_path(station), method: :patch do
-                = time_field_tag   :arrival_time, station.event_time(@route, :arrival)
-                = hidden_field_tag :route_id, @route.id
-                = submit_tag 'Изменить'
-            %td
-              = form_tag update_departure_railway_station_path(station), method: :patch do
-                = time_field_tag   :departure_time, station.event_time(@route, :departure)
-                = hidden_field_tag :route_id, @route.id
-                = submit_tag 'Изменить'
+            - [:arrival, :departure].each do |event|
+              %td
+                = form_tag update_event_railway_station_path(station), method: :patch do
+                  = time_field_tag :event_time, station.event_time(@route, event)
+                  = hidden_field_tag :event, event
+                  = hidden_field_tag :route_id, @route.id
+                  = submit_tag 'Изменить'
 = link_to 'Редактировать', edit_route_path(@route)
 |
 = link_to 'Список маршрутов', routes_path
