--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -1,4 +1,4 @@
-%p
+%footer
   %small
     (с) #{Time.now.year} Сизов Алексей. Учебный проект в
     = link_to 'онлайн-школе Thinknetica', "http://www.thinknetica.com", target: :_blank
