--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,6 +9,8 @@
   %body
     .container
       = render 'layouts/header'
+      %p#notice.notice
+      %p.alert
       = yield
       %footer
         = render 'layouts/footer'
