The application is divided into user and administrative parts

--- a/app/views/layouts/_admin_header.html.haml
+++ b/app/views/layouts/_admin_header.html.haml
@@ -1,6 +1,12 @@
 %header
   .nav.nav-inline
     .nav-link
+      = link_to 'Маршруты', admin_routes_path
+    .nav-link
+      = link_to 'Поезда',   admin_trains_path
+    .nav-link
+      = link_to 'Станции',  admin_railway_stations_path
+    .nav-link
       = link_to 'Поиск билетов', search_path
     .nav-link
       - if user_signed_in?
