--- a/app/views/tickets/_form.html.haml
+++ b/app/views/tickets/_form.html.haml
@@ -18,4 +18,4 @@
     = form.hidden_field :start_station_id, value: params[:start_station_id]
     = form.hidden_field :end_station_id, value: params[:end_station_id]
   .actions
-    = form.submit 'Купить'
+    = form.submit 'Купить', class: "btn btn-primary"
