A logged-in user can view a list of all his purchased tickets, each ticket separately, and also remove the ticket (only from his tickets)

--- a/app/views/admin/trains/index.html.haml
+++ b/app/views/admin/trains/index.html.haml
@@ -1,7 +1,6 @@
-%p#notice= notice
 %h1 Список поездов
-%table
-  %thead
+%table.table.table-bordered
+  %thead.thead-default
     %tr
       %th Номер:
       %th{:colspan => "3"}
