--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -1,9 +1,8 @@
 %header
   .nav.nav-inline
-    .nav-link
-      = link_to 'Поиск билетов', search_path
-    .nav-link
-      - if user_signed_in?
-        = link_to 'Logout', destroy_user_session_path, method: :delete
-      -else
-        = link_to 'Login', new_user_session_path
+    = link_to 'Поиск билетов', search_path, class: 'nav-link'
+    - if user_signed_in?
+      = link_to 'Logout', destroy_user_session_path, method: :delete, class: 'nav-link'
+      = link_to 'Список моих билетов', tickets_path, class: 'nav-link'
+    -else
+      = link_to 'Login', new_user_session_path, class: 'nav-link'
