--- a/app/views/admin/routes/index.html.haml
+++ b/app/views/admin/routes/index.html.haml
@@ -1,7 +1,7 @@
 %p#notice= notice
 %h1 Список маршрутов:
-%table
-  %thead
+%table.table.table-bordered
+  %thead.thead-default
     %tr
       %th Название маршрута
       %th{:colspan => "3"}
