The administrator can view the list of all tickets in the system, each individually, edit the tickets and delete them.

--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -1,8 +1,13 @@
 %header
   .nav.nav-inline
-    = link_to 'Поиск билетов', search_path, class: 'nav-link'
     - if user_signed_in?
+
+      - if current_user.admin?
+        = render 'layouts/admin_links'
+      - else
+        = link_to 'Поиск билетов', search_path, class: 'nav-link'
+
+      = link_to 'Список билетов', current_user.admin? ? admin_tickets_path : tickets_path, class: 'nav-link'
       = link_to 'Logout', destroy_user_session_path, method: :delete, class: 'nav-link'
-      = link_to 'Список моих билетов', tickets_path, class: 'nav-link'
-    -else
+    - else
       = link_to 'Login', new_user_session_path, class: 'nav-link'
