--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,8 +9,10 @@
   %body
     .container
       = render 'layouts/header'
-      %p#notice.notice
+      %p.notice
+        = notice
       %p.alert
+        = alert
       = yield
       %footer
         = render 'layouts/footer'
