Administrator can create tickets for any registered user by selecting them from the list.

--- a/app/views/layouts/_admin_links.html.haml
+++ b/app/views/layouts/_admin_links.html.haml
@@ -1,6 +1,8 @@
 .nav-link
-  = link_to 'Маршруты', admin_routes_path
+  = link_to 'Маршруты',    admin_routes_path
 .nav-link
-  = link_to 'Поезда',   admin_trains_path
+  = link_to 'Поезда',      admin_trains_path
 .nav-link
-  = link_to 'Станции',  admin_railway_stations_path
+  = link_to 'Станции',     admin_railway_stations_path
+.nav-link
+  = link_to 'Новый билет', new_admin_ticket_path
