--- a/app/views/admin/tickets/_form.html.haml
+++ b/app/views/admin/tickets/_form.html.haml
@@ -17,7 +17,16 @@
     .col-10
       = form.text_field :passport_number, class: "form-contol"
   .form-group.row
-    = form.label :user_id, "Выбрать Пользователя", class: "col-2 col-form-label"
+    = form.label :user_id, "Пользователь", class: "col-2 col-form-label"
     = form.collection_select :user_id, User.all, :id, :email, class: "form-control"
+  .form-group.row
+    = form.label :train_id, "Поезд", class: "col-2 col-form-label"
+    = form.collection_select :train_id, Train.all, :id, :number, class: "form-control"
+  .form-group.row
+    = form.label :start_station_id, "Начальная станция", class: "col-2 col-form-label"
+    = form.collection_select :start_station_id, RailwayStation.all, :id, :title, class: "form-control"
+  .form-group.row
+    = form.label :end_station_id, "Конечная станция", class: "col-2 col-form-label"
+    = form.collection_select :end_station_id, RailwayStation.all, :id, :title, class: "form-control"
   .actions
     = form.submit 'Сохранить', class: "btn btn-primary"
