Localization form for Train, Routes and RailwayStation

--- a/app/views/admin/base/panel.html.haml
+++ b/app/views/admin/base/panel.html.haml
@@ -1,7 +1,7 @@
 %h1 Администрирование
 %ul
   %li
-    = link_to "Станции",  admin_railway_stations_path
+    = link_to 'Станции', admin_railway_stations_path
   %li
     = link_to "Маршруты", admin_routes_path
   %li
