--- a/app/views/admin/railway_stations/index.html.haml
+++ b/app/views/admin/railway_stations/index.html.haml
@@ -8,4 +8,4 @@
   %tbody
     = render @railway_stations
 %br/
-= link_to 'Создать новую ж/д станцию', new_admin_railway_station_path
+= link_to t('admin.railway_stations.new.title'), new_admin_railway_station_path
