--- a/app/views/admin/railway_stations/new.html.haml
+++ b/app/views/admin/railway_stations/new.html.haml
@@ -1,3 +1,4 @@
-%h1 Новая станция
+%h1
+  = t('.title')
 = render 'form', railway_station: @railway_station
-= link_to 'Список станций', admin_railway_stations_path
+= link_to t('admin.railway_stations.list'), admin_railway_stations_path
