--- a/app/views/admin/railway_stations/edit.html.haml
+++ b/app/views/admin/railway_stations/edit.html.haml
@@ -1,5 +1,6 @@
-%h1 Редактировать станцию
+%h1 
+  = t('.title')
 = render 'form', railway_station: @railway_station
-= link_to 'Показать', [:admin, @railway_station]
+= link_to t('common.show'), [:admin, @railway_station]
 |
-= link_to 'Список станций', admin_railway_stations_path
+= link_to t('admin.railway_stations.list'), admin_railway_stations_path
