--- a/app/views/admin/trains/edit.html.haml
+++ b/app/views/admin/trains/edit.html.haml
@@ -1,5 +1,6 @@
-%h1 Редактировать поезд
+%h1
+  = t('.title')
 = render 'form', train: @train
-= link_to 'Показать', [:admin, @train]
+= link_to t('common.show'), [:admin, @train]
 |
-= link_to 'Список поездов', admin_trains_path
+= link_to t('admin.trains.list'), admin_trains_path
