--- a/app/views/admin/trains/index.html.haml
+++ b/app/views/admin/trains/index.html.haml
@@ -1,4 +1,5 @@
-%h1 Список поездов
+%h1
+  = t('admin.trains.list')
 %table.table.table-bordered
   %thead.thead-default
     %tr
@@ -7,4 +8,4 @@
   %tbody
     = render @trains
 %br/
-= link_to 'Создать новый поезд', new_admin_train_path
+= link_to t('admin.trains.new.title'), new_admin_train_path
