--- a/app/views/admin/trains/show.html.haml
+++ b/app/views/admin/trains/show.html.haml
@@ -40,8 +40,8 @@
 - else
   %strong К поезду не прицеплен ни один вагон
 
-= link_to 'Редактировать', edit_admin_train_path(@train)
+= link_to t('common.edit'), edit_admin_train_path(@train)
 |
-= link_to 'Список поездов', admin_trains_path
+= link_to t('admin.trains.list'), admin_trains_path
 |
 = link_to 'Добавить вагон', new_admin_train_carriage_path(@train)
