Refactoring form localization

--- a/app/views/admin/trains/_form.html.haml
+++ b/app/views/admin/trains/_form.html.haml
@@ -12,4 +12,4 @@
     = form.radio_button :car_sort, false
     = form.label :car_sort, t('admin.trains.car_sort.tail')
   .actions
-    = form.submit t('.submit', action: train.new_record? ? 'Создать' : 'Изменить'), class: "btn btn-primary"
+    = form.submit
