--- a/app/views/admin/railway_stations/_form.html.haml
+++ b/app/views/admin/railway_stations/_form.html.haml
@@ -4,4 +4,4 @@
     = form.label :title
     = form.text_field :title, id: :railway_station_title
   .actions
-    = form.submit t('.submit', action: railway_station.new_record? ? 'Создать' : 'Изменить'), class: "btn btn-primary"
+    = form.submit
