Fix index pages for stations, trains and routes

--- a/app/views/admin/railway_stations/index.html.haml
+++ b/app/views/admin/railway_stations/index.html.haml
@@ -1,9 +1,8 @@
 %p#notice= notice
-%h1 Железнодорожные станции:
-%table
-  %thead
+%table.table.table-border
+  %thead.thead-default
     %tr
-      %th Название:
+      %th Железнодорожные станции
       %th{:colspan => "3"}
   %tbody
     = render @railway_stations
