--- a/app/views/admin/railway_stations/_form.html.haml
+++ b/app/views/admin/railway_stations/_form.html.haml
@@ -1,3 +1,4 @@
+- hidden = false unless local_assigns[:hidden]
 = form_for [:admin, railway_station], html: { style: "display: #{ hidden ? 'none' : 'block'}"} do |form|
   = render 'common/errors', resource: railway_station
   .field
