--- a/app/views/admin/routes/_route.html.haml
+++ b/app/views/admin/routes/_route.html.haml
@@ -1,5 +1,7 @@
 %tr
-  %td= route.name
+  %td
+    %div{ id: "route_name_#{route.id}" }= route.name
+    = render 'form', route: route, hidden: true
   %td= link_to t('common.show'), [:admin, route]
-  %td= link_to t('common.edit'), edit_admin_route_path(route)
+  %td= link_to t('common.edit'), '', class: 'edit_route', data: { route_id: route.id }
   %td= link_to t('common.delete'), [:admin, route], method: :delete, data: { confirm: t('common.confirm') }
